name:                language-javascript-wl-pprint
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/dvekeman/language-javascript-wl-pprint#readme
license:             BSD3
license-file:        LICENSE
author:              Dieter Vekeman
maintainer:          dieter.vekeman@gmail.com
copyright:           (c) 2016 Dieter Vekeman
category:            CLI Tool
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Language.JavaScript.Parser.Extended
                     , Language.JavaScript.Pretty.Printer.Extended
  build-depends:       base >= 4.7 && < 5
                     , language-javascript
                     , wl-pprint
  default-language:    Haskell2010

executable language-javascript-wl-pprint-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , language-javascript-wl-pprint
  default-language:    Haskell2010

test-suite language-javascript-wl-pprint-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , language-javascript-wl-pprint
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/dvekeman/language-javascript-wl-pprint
